<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg-op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/road1" />

    <ImageView
        android:id="@+id/logo-tag"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/review-tagline"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg-op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo-tag"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/review" />

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg-op" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#6E6E6E"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation">

    </android.support.design.widget.BottomNavigationView>

    <Button
        android:id="@+id/signs"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:includeFontPadding="false"
        android:onClick="onClick1"
        android:text="@string/signs"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <Button
        android:id="@+id/genknow"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:onClick="onClick1"
        android:text="@string/genknow"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signs"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/violation"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="onClick1"
        android:text="@string/violations"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genknow"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/positions"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="onClick1"
        android:text="@string/positions"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toEndOf="@+id/signs"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <Button
        android:id="@+id/parking"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="onClick1"
        android:text="@string/parking"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toEndOf="@+id/genknow"
        app:layout_constraintTop_toBottomOf="@+id/positions" />

    <Button
        android:id="@+id/emergency"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="onClick1"
        android:text="@string/emergencies"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/violation"
        app:layout_constraintTop_toBottomOf="@+id/parking"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/random"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_button"
        android:onClick="onClick1"
        android:text="@string/handling"
        android:textAllCaps="false"
        android:textColor="@color/textWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>