<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emergencies" />

    <View
        android:id="@+id/view8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view8">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkYellow"
            android:gravity="center"
            android:text="@string/emer_description"
            android:textColor="@color/textBlack"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/raleway" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/tow_truck" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/emer_1"
                android:textColor="@color/textBlack"
                android:textSize="12sp"
                app:fontFamily="@font/roboto_mono_bold" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView29"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp"
                android:text="@string/emerans_1"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                app:fontFamily="@font/raleway" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ambulance" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/emer_2"
                android:textColor="@color/textBlack"
                android:textSize="12sp"
                app:fontFamily="@font/roboto_mono_bold" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView40"
                android:layout_alignStart="@+id/textView40"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="5dp"
                android:text="@string/emerans_2"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                app:fontFamily="@font/raleway" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>